Closed Bug 1721590 Opened 4 years ago Closed 4 years ago

Permanent js/src/jit-test/lib/asserts.js:65:27 Error: Assertion failed: expected /unexpected initializer opcode/, got at offset 17: unrecognized opcode: 6a 0 when Gecko 92 merges to Beta on 2021-08-09

Categories

(Core :: JavaScript: WebAssembly, defect)

defect

Tracking

()

VERIFIED FIXED
92 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox90 --- unaffected
firefox91 --- unaffected
firefox92 --- verified

People

(Reporter: aryx, Assigned: rhunt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[task 2021-07-21T11:21:42.780Z] TEST-PASS | js/src/jit-test/tests/wasm/globals-impl.js | Success (code 0, args "--disable-wasm-huge-memory") [0.2 s]
[task 2021-07-21T11:21:42.835Z] /builds/worker/checkouts/gecko/js/src/jit-test/lib/asserts.js:65:27 Error: Assertion failed: expected /unexpected initializer opcode/, got at offset 17: unrecognized opcode: 6a 0
[task 2021-07-21T11:21:42.835Z] Stack:
[task 2021-07-21T11:21:42.835Z]   assertErrorMessage@/builds/worker/checkouts/gecko/js/src/jit-test/lib/asserts.js:65:27
[task 2021-07-21T11:21:42.835Z]   wasmFailValidateText@/builds/worker/checkouts/gecko/js/src/jit-test/lib/wasm.js:58:23
[task 2021-07-21T11:21:42.835Z]   @/builds/worker/checkouts/gecko/js/src/jit-test/tests/wasm/globals.js:12:21
[task 2021-07-21T11:21:42.835Z] Exit code: 3
[task 2021-07-21T11:21:42.835Z] FAIL - wasm/globals.js

followed by more failures.

Flags: needinfo?(rhunt)
Assignee: nobody → rhunt
Status: NEW → ASSIGNED
Flags: needinfo?(rhunt)
Pushed by rhunt@eqrion.net: https://hg.mozilla.org/integration/autoland/rev/433aedbb6a40 wasm: Fix error messages for unexpected const opcode. r=yury
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: