Bug 1721590 - wasm: Fix error messages for unexpected const opcode. r=yury

Differential Revision: https://phabricator.services.mozilla.com/D120496